adjust stopping pattern spacing

--- a/static/css/metro-lcd/platform.css
+++ b/static/css/metro-lcd/platform.css
@@ -28,6 +28,7 @@ div.platform.landscape, div.pre-plat.landscape {
   --arrow-margin-top: calc(var(--stop-column-width) * 0.6);
   --stop-continuation-marker-height: calc(var(--height) * 0.025);
   --stop-column-width: calc(var(--width) * 0.008);
+  --stop-column-margin-right: calc(var(--width) * 0.003);
   --column-bullet-width: calc(var(--width) * 0.005);
 
   --footer-height: calc(var(--height) * 0.18);
