--- a/static/css/metro-lcd/pre-plat-portrait.css
+++ b/static/css/metro-lcd/pre-plat-portrait.css
@@ -28,6 +28,7 @@ div.pre-plat.portrait {
   --arrow-margin-top: calc(var(--stop-column-width) * 0.5);
   --stop-continuation-marker-height: calc(var(--height) * 0.012);
   --stop-column-width: calc(var(--width) * 0.015);
+  --stop-column-margin-right: calc(var(--width) * 0.005);
   --column-bullet-width: calc(var(--width) * 0.01);
 
   --footer-height: calc(var(--height) * 0.2);
